Fix debug command throwing error when there's no item in hand Fix enchantment command can't add enchantment when item has no enchantment